--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.2",
+    "form-data": "^3.0.0",
     "multer": "^1.4.2",
     "sqlite3": "^4.2.0"
   },
